<?xml version="1.0" encoding="utf-8"?>

<!--
  Copyright 2024 Marlonlom
  SPDX-License-Identifier: Apache-2.0
-->
<resources>
  <string name="app_name" translatable="false">Mocca</string>
  <string name="text_calculator_input_currency" translatable="false">"COP $ "</string>
  <string name="text_calculator_input_money_amount">Money amount</string>
  <string name="text_result_error_above_range">You cannot send more than COP $3,000,000.</string>
  <string name="text_result_error_below_range">You cannot send less than COP $5,000.</string>
  <string name="text_result_error_negative_amounts">You cannot send negative amounts.</string>
  <string name="text_result_error_internal">Internal error</string>
  <string name="text_result_label_fee">Transferring fee</string>
  <string name="text_result_label_total">Total to pay</string>
  <string name="text_cop_currency_value" translatable="false">COP $ %1$s</string>
  <string name="text_back_button_failure" translatable="false">backButtonFromFailure</string>
  <string name="text_back_button_success" translatable="false">backButtonFromSuccess</string>
</resources>
