...
 * @author marlonlom
 *
 * @param onClicked Action invoked when the button is clicked.
 */
@Composable
internal fun StartCalculationButton(onClicked: () -> Unit) = Button(
  modifier = Modifier.testTag("start_calculation_action_button")
    .fillMaxWidth(),
  onClick = onClicked,
  colors = ButtonDefaults.buttonColors(
    containerColor = Color.Transparent,
    disabledContainerColor = Color.Transparent,
    contentColor = MaterialTheme.colorScheme.primary,
...
