...
  onBackNavigationAction: () -> Unit,
) {
  Column(
    modifier = Modifier
      .padding(top = 30.dp, bottom = 10.dp)
      .verticalScroll(scrollState)
      .testTag("SuccessCalculatorOutputColumn"),
    verticalArrangement = Arrangement.spacedBy(5.dp),
    horizontalAlignment = Alignment.CenterHorizontally,
  ) {
    Row(
      modifier = Modifier.fillMaxWidth(),
      horizontalArrangement = Arrangement.Center,
...
